--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="./styles.css">
+		<title>Will You Be My Valentine?</title>
         
     </head> 
     <body>
